# ProceduralGenerationWorld

./: .gitignore  CMakeLists.txt  ProceduralGenerationWorld.sln  README.md  compile.sh  compile_commands.json  credits.txt  main_lighting.vsh
Headers/: AABB.hpp  Application.hpp  BaseApplication.hpp  BaseScene.hpp  BatchRenderer.hpp  Block.hpp  BlockUtils.hpp  Camera.hpp  Chunk.hpp  Constants.hpp  Framebuffer.hpp  Image.hpp  Input.hpp  MainScene.hpp  Mesh.hpp  MeshBuilder.hpp  Ray.hpp  ResourceManager.hpp  SceneBase.hpp  SceneManager.hpp  ShaderProgram.hpp  Text.hpp  Texture.hpp  UIRenderer.hpp  Vertex.hpp  Window.hpp  WindowManager.hpp  World.hpp  WorldGenParams.hpp
Headers/Engine/: BaseApplication.hpp  BaseScene.hpp  Clock.hpp  Events.hpp  GameObject.hpp  Input.hpp  Matrix.hpp  MatrixTransform.hpp  Random.hpp  SceneGraph.hpp  TextureManager.hpp  Vector.hpp  Window.hpp  WindowManager.hpp
Headers/Engine/ECS/: ECS.hpp
Headers/Engine/ECS/Components/: DragEventHandlerComponent.hpp  LineComponent.hpp  MouseButtonEventHandlerComponent.hpp  SceneComponent.hpp  ShapeComponent.hpp  TextComponent.hpp  TransformComponent.hpp
Headers/Engine/ECS/Systems/: DragEventSystem.hpp  LineRendererSystem.hpp  MouseButtonEventSystem.hpp  ShapeRendererSystem.hpp  TextRendererSystem.hpp
Headers/Engine/Font/: Font.hpp
Headers/Engine/Geometry/: AABB.hpp  Circle.hpp
Headers/Engine/Graphics/: Color.hpp  Renderer.hpp  ShaderProgram.hpp  Texture.hpp  Vertex.hpp
Headers/Engine/UI/: Button.hpp  Spinner.hpp  Text.hpp  ValueSpinner.hpp
Headers/EntityTemplates/: BlockTemplate.hpp  BlockTemplateManager.hpp
Headers/Enums/: BlockFaceEnum.hpp  BlockTypeEnum.hpp
Headers/Scenes/: BaseScene.hpp  MainScene.hpp  SandboxScene.hpp
Headers/Utils/: MathUtils.hpp  NoiseUtils.hpp
Headers/Vulkan/: GraphicsPipelineBuilder.hpp
ProceduralGenerationWorld/: ProceduralGenerationWorld.vcxproj  ProceduralGenerationWorld.vcxproj.filters  main.fsh  main.vsh  main_lighting.fsh
ProceduralGenerationWorld/Headers/: Block.hpp  Chunk.hpp  Font.hpp  Input.hpp  MainScene.hpp  Mesh.hpp  MeshBuilder.hpp  ResourceManager.hpp  Shader.hpp  ShaderProgram.hpp  Text.hpp  World.hpp
ProceduralGenerationWorld/Headers/EntityTemplates/: BlockTemplateManager.hpp
ProceduralGenerationWorld/Headers/Enums/: BlockFaceEnum.hpp  BlockTypeEnum.hpp
ProceduralGenerationWorld/Resources/Shaders/: Water.fsh  Water.vsh
ProceduralGenerationWorld/Resources/Textures/: Blocks.piskel
ProceduralGenerationWorld/Source/: Block.cpp  Camera.cpp  Chunk.cpp  Font.cpp  Input.cpp  Main.cpp  MainScene.cpp  Mesh.cpp  MeshBuilder.cpp  ResourceManager.cpp  Shader.cpp  World.cpp
ProceduralGenerationWorld/Source/EntityTemplates/: BlockTemplate.cpp
Resources/Shaders/: Font.frag  Font.vert  Main.fsh  SunMoon.fsh  SunMoon.vsh  UI.fsh  UI.vsh
Resources/Textures/: Blocks.piskel  GridTemplate.piskel
Source/: Application.cpp  BaseApplication.cpp  BatchRenderer.cpp  Block.cpp  BlockUtils.cpp  Camera.cpp  Chunk.cpp  Framebuffer.cpp  Image.cpp  Input.cpp  Main.cpp  MainScene.cpp  Mesh.cpp  MeshBuilder.cpp  ResourceManager.cpp  SceneManager.cpp  ShaderProgram.cpp  Text.cpp  Texture.cpp  UIRenderer.cpp  Window.cpp  WindowManager.cpp  World.cpp
Source/Engine/: BaseApplication.cpp  Clock.cpp  Input.cpp  Random.cpp  SceneGraph.cpp  TextureManager.cpp  Window.cpp  WindowManager.cpp
Source/Engine/ECS/Systems/: DragEventSystem.cpp  LineRendererSystem.cpp  MouseButtonEventSystem.cpp  ShapeRendererSystem.cpp  TextRendererSystem.cpp
Source/Engine/Font/: Font.cpp
Source/Engine/Graphics/: Renderer.cpp  ShaderProgram.cpp
Source/Engine/UI/: Button.cpp  Spinner.cpp  Text.cpp  ValueSpinner.cpp
Source/EntityTemplates/: BlockTemplate.cpp  BlockTemplateManager.cpp
Source/Scenes/: MainScene.cpp  SandboxScene.cpp
Source/Utils/: FileUtils.cpp  MathUtils.cpp  NoiseUtils.cpp
Source/Vulkan/: GraphicsPipelineBuilder.cpp  VulkanBuffer.cpp  VulkanContext.cpp  VulkanImage.cpp  VulkanImageView.cpp
